feat: derive pause metrics from exact measurement windows